Couple Corrections to figure captions

--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -286,7 +286,7 @@ $\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$  & 
 \hline 
 \end{tabular}
 \caption{Estimated Parameters on 10 different runs with high noise. First row is the true parameters.
-Note also that the red row is Run 1 and the blue row is Run 2, as named in  \autoref{fig:NoiseComparisonJustTwo}
+The red row is Run 1 and the blue row is Run 2, as named in  \autoref{fig:NoiseComparisonJustTwo}
 and \autoref{fig:FitComparisonHighNoiseJust2}}
 \label{tab:HighNoiseResults} 
 \end{table}
