changes in introduction primarily

--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -48,6 +48,7 @@ plausible models is that such data may in fact be added with relative ease.
 
 Automatic detection of the noise level in the signal, to get a decent wieghting
 function. Large scale activation to get more parameter estimates. 
+Viscoelastic effects from \cite{Buston2004}, discussed in \cite{Deneux2006}.
 
 In conclusion, using particle filters to estimate the BOLD response are 
 a powerful method of fitting to noisy data. The technique also
